# sciform

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Changelog.rst  LICENSE  README.md  README.rst  README_draft.md  coverage_feature.toml  coverage_unit.toml  pyproject.toml  readthedocs.yaml  ruff.toml
.github/workflows/: python-package.yml  python-publish.yml
docs/: requirements.txt
docs/source/: Formatting Options.rst  Supported Prefixes.rst  api.rst  conf.py  examples.html  examples.rst  exp replacement.rst  format specification mini language.rst  fsml.rst  index.rst  options.rst  project.rst  uncertainty formatting.rst  usage.rst
examples/: fit_plot_no_sciform.py  fit_plot_with_sciform.py  jupyter_output_example.ipynb  requirements-example.txt
examples/data/: fit_data.json
examples/outputs/: fit_plot_no_sciform_table.txt  fit_plot_with_sciform_table.txt
src/sciform/: __init__.py  defaults.py  float_formatting.py  format.py  format_options.py  format_spec.py  format_utils.py  formatter.py  formatting.py  fsml.py  global_configuration.py  global_options.py  grouping.py  modes.py  output_conversion.py  parser.py  prefix.py  rendered_options.py  scinum.py  sfloat.py  target_length.py  types.py  unc_format.py  user_options.py
src/sciform/api/: __init__.py  formatted_number.py  formatter.py  global_configuration.py  scinum.py
src/sciform/format_utils/: __init__.py  exp_translations.py  exponent_utils.py  exponents.py  make_strings.py  number_utils.py  numbers.py  prefix.py  rounding.py  rounding_utils.py  string_utils.py
src/sciform/formatting/: __init__.py  fsml.py  number_formatting.py  output_conversion.py  parser.py
src/sciform/options/: __init__.py  conversion.py  finalized_options.py  global_options.py  input_options.py  option_types.py  populated_options.py  validation.py
tests/: __init__.py  quick_test.py  test.py  test_ascii_conversion.py  test_config.py  test_docstrings.py  test_float_formatter.py  test_float_formatting.py  test_float_fsml.py  test_fsml.py  test_html_conversion.py  test_invalid_options.py  test_latex_conversion.py  test_modes_strings.py  test_options_printout.py  test_output_conversion.py  test_print.py  test_sci_num.py  test_sci_num_and_sci_num_unc.py  test_separators.py  test_string_parser.py  test_target_length.py  test_val_unc.py  test_val_unc_formatter.py  test_val_unc_fsml.py  utils.py
tests/feature/: test_float_formatter.py  test_global_config.py  test_options_printout.py  test_output_conversion.py  test_separators.py  test_string_parser.py  test_val_formatter.py  test_val_fsml.py  test_val_unc_formatter.py  test_val_unc_fsml.py
tests/unit/: test_exponent_utils.py  test_grouping.py  test_invalid_options.py  test_make_strings.py  test_number_utils.py  test_options_printout.py  test_rounding_utils.py  test_validation.py
tests/unit/format_utils/: test_exp_translations.py  test_exponent_utils.py  test_grouping.py  test_make_strings.py  test_number_utils.py  test_rounding_utils.py
