[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sciform"
authors = [
    {name = "Justin Gerber", email="justin.gerber48@gmail.com"}
]
description = "A package for formatting numbers into scientific formatted strings."
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dynamic = ["version", "readme"]

[project.urls]
homepage = "https://github.com/jagerber48/sciform"
documentation = "https://sciform.readthedocs.io"

[tool.setuptools.dynamic]
readme = {file = "README.rst"}

[tool.setuptools_scm]

[tool.ruff.lint]
select = ['ALL']
ignore = [
    'D105',
    'D212',
    'D211',
    'PLR2004',
    'RUF001',
    'SIM108',
    'TD002',
    'TD003',
    'FIX002',
]

[tool.ruff.per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"tests/*.py" = ["D", "ANN", "PT"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
