[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sciform"
authors = [
    {name = "Justin Gerber", email="justin.gerber48@gmail.com"}
]
description = "A package for formatting numbers into scientific formatted strings."
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dynamic = ["version", "readme"]

[project.urls]
homepage = "https://github.com/jagerber48/sciform"
documentation = "https://sciform.readthedocs.io"

[project.optional-dependencies]
dev = [
    "ruff",
    "coverage",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-toolbox",
    "numpy",
]
examples = [
    "numpy",
    "scipy",
    "matplotlib",
    "tabulate",
    "jupyter",
]

[tool.setuptools.dynamic]
readme = {file = "README.rst"}

[tool.setuptools_scm]

[tool.ruff]
allowed-confusables = ["×"]

[tool.ruff.lint]
select = ['ALL']
ignore = [
    'D105',
    'D212',
    'D211',
    'PLR2004',
    'RUF001',
    'SIM108',
    'TD002',
    'TD003',
    'FIX002',
    'RET504',
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D", "ANN", "PT"]
"examples/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
